--- a/examples.html
+++ b/examples.html
@@ -61,7 +61,7 @@
                 <p>Gender of Users: 56% male, 44% female.</p>
                 <p>Best For: Community building, sharing news, events, and personal updates.</p>
             </div>
-            <img id="faceExample" class="examplePic" src="pics/examples/youtubeExample.png" alt="">
+            <img id="faceExample" class="examplePic" src="pics/examples/facebook.png" alt="">
         </div>
         <div id="instagram" class="right">
             <img id="instaExample" class="examplePic" src="pics/examples/instaExample.png" alt="">
